--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+# ignore vscode directory
+.vscode/
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
